refactor methods to able use itext v9